# cpp-boilerplate

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  PID.cpp  main.cpp  newPID.cpp
include/: PID.hpp  newPID.hpp
results/: cppcheck.txt  cpplint.txt  test_results.txt  valgrind_final_out.txt  valgrind_init_out.txt  valgrind_out.txt
test/: CMakeLists.txt  PIDTest.cpp  gmockStatic.hpp  main.cpp  mockTest.hpp
